# icnc_resources

./: .setup_assistant  .style.yapf  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
config/: cartesian_limits.yaml  fake_ros2_controllers.yaml  i608.ros2_control.xacro  i608.urdf.xacro  i608_arm.srdf.xacro  i608_arm.xacro  i608_moveit_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros2_controllers.yaml
i3_description/: CMakeLists.txt  package.xml
i3_moveit_config/: CMakeLists.txt  package.xml
i406_description/: CMakeLists.txt  package.xml
i406_moveit_config/: CMakeLists.txt  package.xml
i608_description/: CMakeLists.txt  package.xml
i608_description/meshes/: base_link.STL  link_2.STL  link_3.STL  link_5.STL  link_6.STL
i608_description/urdf/: i608.urdf
i608_moveit_config/: CMakeLists.txt  package.xml
i608_moveit_config/config/: i608.ros2_control.xacro  i608_arm.xacro  move_group.launch  ompl_planning.yaml  planning_context.launch  planning_pipeline.launch.xml
i608_moveit_config/launch/: i608_fake.launch.py
icnc_resources/: CMakeLists.txt  package.xml
launch/: i608_fake.launch.py
meshes/: gripper.STL  link_4.STL
panda_description/: CMakeLists.txt  package.xml
panda_description/urdf/: panda.urdf
panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  ompl_planning.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  panda_hand.ros2_control.xacro  ros2_controllers.yaml
panda_moveit_config/launch/: demo.launch.py  moveit.rviz
urdf/: i608.urdf  i608_fake.urdf
