<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icnc_resources</name>
  <version>1.0.0</version>
  <description>icnc's resources description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>icnc_resources_i608_description</exec_depend>
  <exec_depend>icnc_resources_i608_moveit_config</exec_depend>

  <exec_depend>icnc_resources_i406_description</exec_depend>
  <exec_depend>icnc_resources_i406_moveit_config</exec_depend>

  <exec_depend>icnc_resources_i3_description</exec_depend>
  <exec_depend>icnc_resources_i3_moveit_config</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>