<?xml version="1.0"?>
<package format="3">
	<name>moveit_resources_panda_moveit_config</name>
	<version>2.0.6</version>
	<description>
		<p>MoveIt Resources for testing: Franka Emika Panda</p>
		<p>A project-internal configuration for testing in MoveIt.</p>
	</description>
	<author email="mike@picknik.ai">Mike Lautman</author>
	<maintainer email="mike@picknik.ai">Mike Lautman</maintainer>

	<license>BSD</license>

	<url type="website">http://moveit.ros.org/</url>
	<url type="bugtracker">https://github.com/ros-planning/moveit_resources/issues</url>
	<url type="repository">https://github.com/ros-planning/moveit_resources</url>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>moveit_resources_panda_description</exec_depend>

	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>joint_state_publisher_gui</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>